Frm Baja de por Eval. Tenc y Obra

--- a/CapaNegocio/CapaNegocio.csproj
+++ b/CapaNegocio/CapaNegocio.csproj
@@ -69,6 +69,8 @@
     <Compile Include="NacfUBEt_UbicacionElectrica.cs" />
     <Compile Include="NacfUNMt_Unimed.cs" />
     <Compile Include="NacfVNRt_VNR.cs" />
+    <Compile Include="NACF_BajaEvaluacionTecnica.cs" />
+    <Compile Include="NACF_BajaLiquidacionObra.cs" />
     <Compile Include="NAFNo_Capitalizables.cs" />
     <Compile Include="NbdiCAFpClaseDeActivoFijo.cs" />
     <Compile Include="NbdiCDDpClasesDeDocumento.cs" />
