--- a/CapaDatos/CapaDatos.csproj
+++ b/CapaDatos/CapaDatos.csproj
@@ -68,6 +68,8 @@
     <Compile Include="DacfUBEt_UbicacionElectrica.cs" />
     <Compile Include="DacfUNMt_Unimed.cs" />
     <Compile Include="DAcfVNRt_VNR.cs" />
+    <Compile Include="DACF_BajaEvaluacionTecnica.cs" />
+    <Compile Include="DACF_BajaLiquidacionObra.cs" />
     <Compile Include="DAFNo_Capitalizables.cs" />
     <Compile Include="DbdiCAFpClaseDeActivoFijo.cs" />
     <Compile Include="DBdiCDDpClasesDeDocumento.cs" />
