--- a/CapaPresentacion/CapaPresentacion.csproj
+++ b/CapaPresentacion/CapaPresentacion.csproj
@@ -967,6 +967,7 @@
     <EmbeddedResource Include="Reportes\Rpt_LOCLocal.rdlc" />
     <EmbeddedResource Include="Reportes\Rpt_MARMarca.rdlc" />
     <EmbeddedResource Include="Reportes\Rpt_MATMaterial.rdlc" />
+    <EmbeddedResource Include="Reportes\Rpt_Movimiento_TransferenciaActivo.rdlc" />
     <EmbeddedResource Include="Reportes\Rpt_MVMMotivoMovimiento.rdlc" />
     <EmbeddedResource Include="Reportes\Rpt_PDFProcesoDiferido.rdlc" />
     <EmbeddedResource Include="Reportes\Rpt_PRVProveedor.rdlc" />
