--- a/CapaPresentacion/CapaPresentacion.csproj
+++ b/CapaPresentacion/CapaPresentacion.csproj
@@ -962,13 +962,13 @@
     <EmbeddedResource Include="Reportes\Rpt_CDDClasesDeDocumento.rdlc" />
     <EmbeddedResource Include="Reportes\Rpt_CMPComponente.rdlc" />
     <EmbeddedResource Include="Reportes\Rpt_CSTCosto.rdlc" />
+    <EmbeddedResource Include="Reportes\Rpt_Depreciacion.rdlc" />
     <EmbeddedResource Include="Reportes\Rpt_ESTestado.rdlc" />
     <EmbeddedResource Include="Reportes\Rpt_INVInventario.rdlc" />
     <EmbeddedResource Include="Reportes\Rpt_LOCLocal.rdlc" />
     <EmbeddedResource Include="Reportes\Rpt_MARMarca.rdlc" />
     <EmbeddedResource Include="Reportes\Rpt_MATMaterial.rdlc" />
     <EmbeddedResource Include="Reportes\Rpt_Movimiento_Activo.rdlc" />
-    <EmbeddedResource Include="Reportes\Rpt_Movimiento_TransferenciaActivo.rdlc" />
     <EmbeddedResource Include="Reportes\Rpt_MVMMotivoMovimiento.rdlc" />
     <EmbeddedResource Include="Reportes\Rpt_PDFProcesoDiferido.rdlc" />
     <EmbeddedResource Include="Reportes\Rpt_PRVProveedor.rdlc" />
