--- a/CapaPresentacion/CapaPresentacion.csproj
+++ b/CapaPresentacion/CapaPresentacion.csproj
@@ -973,6 +973,7 @@
     <EmbeddedResource Include="Reportes\Rpt_CSTCosto.rdlc" />
     <EmbeddedResource Include="Reportes\Rpt_Depreciacion1.rdlc" />
     <EmbeddedResource Include="Reportes\Rpt_ESTestado.rdlc" />
+    <EmbeddedResource Include="Reportes\Rpt_Ficha_ControlActivos.rdlc" />
     <EmbeddedResource Include="Reportes\Rpt_INVInventario.rdlc" />
     <EmbeddedResource Include="Reportes\Rpt_LOCLocal.rdlc" />
     <EmbeddedResource Include="Reportes\Rpt_MARMarca.rdlc" />
