--- a/CapaDatos/CapaDatos.csproj
+++ b/CapaDatos/CapaDatos.csproj
@@ -43,6 +43,7 @@
     <Compile Include="DAcfACTt_Actividad.cs" />
     <Compile Include="DAcfAMBt_Ambiente.cs" />
     <Compile Include="DAcfCMPt_Componente.cs" />
+    <Compile Include="DACFCODNIIF_SistELECTRICO.cs" />
     <Compile Include="DacfCRPt_Centro_Responsabilidad.cs" />
     <Compile Include="DacfCRSt_Caracteristicas.cs" />
     <Compile Include="DacfCSTt_Costo.cs" />
@@ -70,9 +71,17 @@
     <Compile Include="DacfUBEt_UbicacionElectrica.cs" />
     <Compile Include="DacfUNMt_Unimed.cs" />
     <Compile Include="DAcfVNRt_VNR.cs" />
+    <Compile Include="DACFVR_IDENT.cs" />
     <Compile Include="DACF_BajaEvaluacionTecnica.cs" />
     <Compile Include="DACF_BajaLiquidacionObra.cs" />
+    <Compile Include="Dacf_BajaTension.cs" />
+    <Compile Include="DACF_FACTTRANSFORMADORES.cs" />
+    <Compile Include="DACF_MEDIATENSION.cs" />
     <Compile Include="DACF_TransferenciaDonacion.cs" />
+    <Compile Include="DACF_ValorResidual.cs" />
+    <Compile Include="DACF_ValorResidualNiff.cs" />
+    <Compile Include="DACF_Valuacion.cs" />
+    <Compile Include="DACF_VIDAUTILTASADA.cs" />
     <Compile Include="DAFNo_Capitalizables.cs" />
     <Compile Include="DbdiCAFpClaseDeActivoFijo.cs" />
     <Compile Include="DBdiCDDpClasesDeDocumento.cs" />
