--- a/CapaPresentacion/CapaPresentacion.csproj
+++ b/CapaPresentacion/CapaPresentacion.csproj
@@ -980,6 +980,7 @@
       <DependentUpon>Pruebas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Report2.rdlc" />
+    <EmbeddedResource Include="Reportes\Ficha_Control_Inventario.rdlc" />
     <EmbeddedResource Include="Reportes\Rpt_Cbarra.rdlc" />
     <EmbeddedResource Include="Reportes\Rpt_ACF_ActivoFijo.rdlc" />
     <EmbeddedResource Include="Reportes\Rpt_ACTActividad.rdlc" />
